# inmem-vector-db

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  chunks_test.csv  dependencies.py  deploy_log.txt  main.py  minikube-deploy.sh  pyproject.toml  requirements.txt  test.py
api/: chunks.py  documents.py  libraries.py  search.py
app/: dependencies.py  main.py
app/api/: chunks.py  dependencies.py  documents.py  libraries.py  router.py  search.py
app/api/endpoints/: chunks.py  documents.py  libraries.py  search.py
app/api/exceptions/: base.py  chunk_exceptions.py  common_exceptions.py  document_exceptions.py  handlers.py  library_exceptions.py  validation_exceptions.py
app/api/schemas/: chunk.py  document.py  library.py  search.py
app/api/services/: background_tasks.py  chunk_service.py  document_service.py  (+1 more)
app/config/: indexer_hparams.py  project_settings.py
app/core/: background_tasks.py  embedding.py
core/: background_tasks.py  embedding.py
deployment/: Dockerfile  docker-compose.yml  minikube-deploy.sh
deployment/vector-db/: Chart.yaml  README.md  values.yaml
indexers/: flat_index.py  hsnw.py  indexer.py  lsh.py
models/: chunk.py  document.py  library.py
stackai-vector-db/: Chart.yaml  README.md  values.yaml
stackai-vector-db/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
tests/: test_e2e.py  test_library_save_load.py
vector-db/: Chart.yaml  README.md  values.yaml
vector-db/templates/: NOTES.txt  deployment.yaml  ingress.yaml
(+15 files in other folders)
