[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vector-db"
version = "1.0.0"
description = "A vector database implementation with embedding-based search capabilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "cohere>=5.15.0",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "black>=23.3.0",
    "isort>=5.12.0",
    "ruff>=0.11.9",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"
lint.select = ["E", "F", "I", "W"]
lint.ignore = []
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
